--- a/.github/workflows/cfn-analysis.yml
+++ b/.github/workflows/cfn-analysis.yml
@@ -24,11 +24,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14
-      - name: Install npm dependencies
-        run: yarn install
+      
       - name: synthesize cdk template for cfn for analysis
         run: |
           cd ./solutions/smart-deployment
+          node common/scripts/install-run-rushx.js build 
           rushx cdk synth -c issuerEndpoint='test' -c oAuth2ApiEndpoint='test' -c patientPickerEndpoint='test' --require-approval=never
       - name: cfn_nag on cdk template
         uses: stelligent/cfn_nag@master
