--- a/.github/workflows/cfn-analysis.yml
+++ b/.github/workflows/cfn-analysis.yml
@@ -28,7 +28,7 @@ jobs:
       - name: synthesize cdk template for cfn for analysis
         run: |
           cd ./solutions/smart-deployment
-          node common/scripts/install-run-rushx.js build 
+          node ../../common/scripts/install-run-rushx.js build 
           rushx cdk synth -c issuerEndpoint='test' -c oAuth2ApiEndpoint='test' -c patientPickerEndpoint='test' --require-approval=never
       - name: cfn_nag on cdk template
         uses: stelligent/cfn_nag@master
