--- a/.github/workflows/cfn-analysis.yml
+++ b/.github/workflows/cfn-analysis.yml
@@ -16,14 +16,14 @@ on:
 
 jobs:
   cfn-analyze:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 19
+          node-version: 18.14.0
       
       - name: synthesize cdk template for cfn for analysis
         run: |
