refactor: refactor deploy workflow for smart solution

--- a/solutions/smart-deployment/package.json
+++ b/solutions/smart-deployment/package.json
@@ -22,7 +22,7 @@
     "clean": "rm -rf build/* node_modules/* dist/* .nyc_output/*",
     "compile-igs": "ts-node scripts/compile-igs.ts",
     "deploy": "cdk deploy --outputs-file Info_Output.log",
-    "int-test": "jest test --test-path-pattern=src/integration-tests/*",
+    "int-test": "jest --testPathPattern=src/integration-tests/subscriptions.test.ts* --runInBand",
     "lint": "eslint . --ext .ts,.tsx",
     "lint-fix": "eslint --fix . --ext .ts,.tsx",
     "local": "node .",
@@ -99,6 +99,7 @@
     "@types/sinon": "^9.0.0",
     "@types/tmp": "^0.2.3",
     "@types/uuid": "^8.3.4",
+    "@types/yargs": "^17.0.22",
     "aws-cdk": "2.61.0",
     "chance": "^1.1.7",
     "esbuild": "^0.14.39",
@@ -120,6 +121,19 @@
     "typescript": "^4.9.4",
     "uuid": "^8.3.2",
     "wait-for-expect": "^3.0.2"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "testEnvironment": "node",
+    "testRegex": ".test.ts",
+    "testRunner": "jest-circus/runner",
+    "transform": {
+      "\\.(ts)$": "ts-jest"
+    }
   },
   "engines": {
     "node": ">=18.0.0"
