--- a/solutions/deployment/package.json
+++ b/solutions/deployment/package.json
@@ -21,7 +21,7 @@
     "build": "heft build --clean && rushx pkg-json-lint",
     "build-test": "heft test --clean && rushx pkg-json-lint",
     "cdk": "cdk",
-    "clean": "rm -rf build/* node_modules/* dist/* .serverless/* .nyc_output/* cdk.out/*",
+    "clean": "rm -rf build/* node_modules/* dist/* .nyc_output/* cdk.out/*",
     "compile-igs": "ts-node scripts/compile-igs.ts",
     "deploy": "cdk deploy --outputs-file Info_Output.log",
     "int-test": "jest --testPathPattern=integration-test/* --runInBand",
@@ -30,10 +30,6 @@
     "local": "node .",
     "pkg-json-lint": "npmPkgJsonLint -c ../../.npmpackagejsonlintrc.json . --i ../../.npmpackagejsonlintignore",
     "release": "rush build && rush lint-fix && rush test",
-    "serverless-deploy": "serverless deploy",
-    "serverless-info": "serverless info",
-    "serverless-package": "serverless package",
-    "serverless-remove": "serverless remove",
     "sort-package-json": "sort-package-json package.json",
     "standard-version": "standard-version --skip.tag=true",
     "test": "heft test --clean --no-build && rushx pkg-json-lint",
@@ -129,10 +125,6 @@
     "npm-package-json-lint-config-default": "^5.0.0",
     "prettier": "^2.4.1",
     "qs": "^6.10.3",
-    "serverless": "2.71.0",
-    "serverless-bundle": "^4.4.0",
-    "serverless-offline": "^8.2.0",
-    "serverless-step-functions": "^3.1.1",
     "sinon": "^11.0.0",
     "sort-package-json": "^1.57.0",
     "tmp-promise": "^3.0.2",
