--- a/fwoa-core/routing/package.json
+++ b/fwoa-core/routing/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "build": "heft build --clean && rushx pkg-json-lint",
     "build-test": "heft test --clean && rushx pkg-json-lint",
-    "clean": "rm -rf build/* node_modules/* dist/* .serverless/* .nyc_output/* lib/*",
+    "clean": "rm -rf build/* node_modules/* dist/* .nyc_output/* lib/*",
     "lint": "eslint . --ext .ts,.tsx",
     "lint-fix": "eslint --fix . --ext .ts,.tsx",
     "local": "node .",
