--- a/.github/workflows/cfn-analysis.yml
+++ b/.github/workflows/cfn-analysis.yml
@@ -30,6 +30,6 @@ jobs:
       - name: cfn_nag on cdk template
         uses: stelligent/cfn_nag@master
         with:
-          input_path: cdk.out/smart-fhir-service-dev.template.json
+          input_path: ./solutions/smart-deployment/cdk.out/smart-fhir-service-dev.template.json
           
           
