--- a/.github/workflows/cfn-analysis.yml
+++ b/.github/workflows/cfn-analysis.yml
@@ -22,6 +22,21 @@ jobs:
       
       - name: Base Action
         uses: ./.github/actions/baseAction
+        
+      - name: Build Hapi validator
+        run: |
+          cd ./fwoa-utilities/javaHapiValidatorLambda
+          mvn --batch-mode --update-snapshots --no-transfer-progress clean install
+      
+      - name: Download US Core IG
+        # NOTE if updating the IG version. Please see update implementationGuides.test.ts test too.
+        run: |
+          mkdir -p implementationGuides
+          curl http://hl7.org/fhir/us/core/STU3.1.1/package.tgz | tar xz -C implementationGuides
+      
+      - name: Compile IGs
+        run: yarn run compile-igs
+
       - name: synthesize smart cdk template for cfn for analysis
         run: |
           cd ./solutions/smart-deployment
