--- a/.github/workflows/cfn-analysis.yml
+++ b/.github/workflows/cfn-analysis.yml
@@ -28,15 +28,12 @@ jobs:
           cd ./fwoa-utilities/javaHapiValidatorLambda
           mvn --batch-mode --update-snapshots --no-transfer-progress clean install
       
-      - name: Download US Core IG
-        # NOTE if updating the IG version. Please see update implementationGuides.test.ts test too.
-        run: |
-          mkdir -p implementationGuides
-          curl http://hl7.org/fhir/us/core/STU3.1.1/package.tgz | tar xz -C implementationGuides
-      
-      - name: Compile IGs
+      - name: Download US Core IG and Compile IGs
+      # NOTE if updating the IG version. Please see update implementationGuides.test.ts test too.
         run: |
           cd ./solutions/deployment
+          mkdir -p implementationGuides
+          curl http://hl7.org/fhir/us/core/STU3.1.1/package.tgz | tar xz -C implementationGuides
           ../../common/scripts/install-run-rushx.js compile-igs
 
       - name: synthesize smart cdk template for cfn for analysis
