--- a/solutions/deployment/package.json
+++ b/solutions/deployment/package.json
@@ -117,6 +117,7 @@
     "@types/sinon": "^9.0.0",
     "@types/tmp": "^0.2.3",
     "@types/uuid": "^8.3.4",
+    "@types/yargs": "^17.0.22",
     "aws-cdk": "2.61.0",
     "chance": "^1.1.7",
     "esbuild": "^0.14.39",
