--- a/.github/workflows/smart-workflow-periodically.yaml
+++ b/.github/workflows/smart-workflow-periodically.yaml
@@ -1,4 +1,4 @@
-name: (SMART) Unit Tests, Deploy, Integration Test
+name: (SMART) Unit Tests, Deploy, Integration Test periodically
 on:
   push:
     branches:
@@ -12,7 +12,6 @@ env:
 
 jobs:
   inferno-test:
-    needs: deploy
     name: Run Inferno Tests - enableMultiTenancy=${{ matrix.enableMultiTenancy }}
     runs-on: ubuntu-20.04
     strategy:
