refactor: revert the workflow is triggered in pr

--- a/.github/workflows/smart-integ-inferno-test-periodically.yaml
+++ b/.github/workflows/smart-integ-inferno-test-periodically.yaml
@@ -1,7 +1,7 @@
-name: (SMART) Unit Tests, Deploy, Integration Test periodically
+name: (SMART) Unit Tests, Integration Test periodically
 on:
-  pull_request:
-    types: [opened, synchronize, edited, reopened]
+  schedule:
+    - cron: '0 0 1,15 * *'
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.SMART_AWS_ACCESS_KEY_ID }}
