--- a/solutions/smart-deployment/package.json
+++ b/solutions/smart-deployment/package.json
@@ -22,7 +22,7 @@
     "clean": "rm -rf build/* node_modules/* dist/* .nyc_output/*",
     "compile-igs": "ts-node scripts/compile-igs.ts",
     "deploy": "cdk deploy --outputs-file Info_Output.log",
-    "int-test": "jest test --testPathPattern=integration-test/* --runInBand",
+    "int-test": "jest --testPathPattern=src/integration-tests/* --runInBand",
     "lint": "eslint . --ext .ts,.tsx",
     "lint-fix": "eslint --fix . --ext .ts,.tsx",
     "local": "node .",
@@ -112,6 +112,7 @@
     "@types/sinon": "^9.0.0",
     "@types/tmp": "^0.2.3",
     "@types/uuid": "^8.3.4",
+    "@types/yargs": "^17.0.22",
     "aws-cdk": "2.61.0",
     "chance": "^1.1.7",
     "esbuild": "^0.14.39",
