--- a/.github/workflows/deploy-smart.yaml
+++ b/.github/workflows/deploy-smart.yaml
@@ -75,12 +75,13 @@ jobs:
       - name: Download US Core IG
         # NOTE if updating the IG version. Please see update implementationGuides.test.ts test too.
         run: |
+          cd ./solutions/smart-deployment
           mkdir -p implementationGuides
           curl http://hl7.org/fhir/us/core/STU3.1.1/package.tgz | tar xz -C implementationGuides
       - name: Compile IGs
         run: |
           npm install -g ts-node
-          cd ./solutions/deployment
+          cd ./solutions/smart-deployment
           node ../../common/scripts/install-run-rushx.js compile-igs
       - name: Setup allowList for Subscriptions integ tests
         run: cp solutions/smart-deployment/src/integration-tests/infrastructure/allowList-integTests.ts solutions/smart-deployment/src/subscriptions/allowList.ts
