fix: fix condition to send notification and test notification in current branch

--- a/.github/workflows/pnpm-audit-with-notification.yml
+++ b/.github/workflows/pnpm-audit-with-notification.yml
@@ -58,13 +58,14 @@ jobs:
           pnpm audit --prod
 
       - name: Report Status
-        if: always()
+        if: ${{ failure() && github.ref == 'refs/remotes/origin/jay/pnpm-audit-workflow-with-notification' }}
         id: slack
         uses: slackapi/slack-github-action@v1.23.0
         with:
             payload: |
-            {
-              "status": ${{ job.status }}
-            }
+              {
+                "status": ${{ job.status }}
+              }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}    
+
