--- a/.github/workflows/pnpm-audit-with-notification.yml
+++ b/.github/workflows/pnpm-audit-with-notification.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.head_ref }}
-          token: ${{ secrets.MERGE_TOKEN }}
+          token: ${{ secrets.BOT_TOKEN }}
 
       - name: Use Node.js 16.x
         uses: actions/setup-node@v3
