refactor(t): test notification function

--- a/.github/workflows/pnpm-audit-with-notification.yml
+++ b/.github/workflows/pnpm-audit-with-notification.yml
@@ -58,7 +58,7 @@ jobs:
           pnpm audit --prod
 
       - name: Report Status
-        if: ${{ failure() && github.ref == 'refs/remotes/origin/jay/pnpm-audit-workflow-with-notification' }}
+        if: failure()
         id: slack
         uses: slackapi/slack-github-action@v1.23.0
         with:
