fix: update json format and fix dependencies

--- a/.github/workflows/pnpm-audit-with-notification.yml
+++ b/.github/workflows/pnpm-audit-with-notification.yml
@@ -64,7 +64,7 @@ jobs:
         with:
             payload: |
               {
-                "status": ${{ job.status }}
+                "status": "${{ job.status }}"
               }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}    
