--- a/solutions/deployment/package.json
+++ b/solutions/deployment/package.json
@@ -24,7 +24,7 @@
     "clean": "rm -rf build/* node_modules/* dist/* .nyc_output/* cdk.out/*",
     "compile-igs": "ts-node scripts/compile-igs.ts",
     "deploy": "cdk deploy --outputs-file Info_Output.log",
-    "int-test": "jest --testPathPattern=integration-test/* --runInBand",
+    "int-test": "jest --testPathPattern=src/integration-tests/* --runInBand",
     "lint": "eslint . --ext .ts,.tsx",
     "lint-fix": "eslint --fix . --ext .ts,.tsx",
     "local": "node .",
@@ -35,6 +35,19 @@
     "test": "heft test --clean --no-build && rushx pkg-json-lint",
     "test-coverage": "jest --coverage --testPathPattern=src/*",
     "watch": "tsc -w"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "testEnvironment": "node",
+    "testRegex": ".test.ts",
+    "testRunner": "jest-circus/runner",
+    "transform": {
+      "\\.(ts)$": "ts-jest"
+    }
   },
   "resolutions": {
     "ansi-regex": "^5.0.1",
@@ -116,6 +129,7 @@
     "@types/yargs": "^17.0.22",
     "aws-cdk": "2.61.0",
     "chance": "^1.1.7",
+    "dotenv": "^16.0.3",
     "esbuild": "^0.14.39",
     "eslint": "^8.7.0",
     "jest": "^26.6.3",
