--- a/.github/workflows/pnpm-audit-pr.yml
+++ b/.github/workflows/pnpm-audit-pr.yml
@@ -9,12 +9,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.head_ref }}
-          token: ${{ secrets.BOT_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Use Node.js 16.x
+      - name: Use Node.js 18.x
         uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+          node-version: '18.x'
 
       - name: Cache Rush
         uses: actions/cache@v3
