--- a/.github/workflows/pnpm-audit-periodically-with-notification.yml
+++ b/.github/workflows/pnpm-audit-periodically-with-notification.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
     types: [opened, synchronize, edited, reopened]
 jobs:
-  pnpm-audit:
+  pnpm-audit-work:
     Uses:
       ./.github/workflows/pnpm-audit-pr.yml
   slack-notification:
