--- a/.github/workflows/pnpm-audit-periodically-with-notification.yml
+++ b/.github/workflows/pnpm-audit-periodically-with-notification.yml
@@ -12,20 +12,18 @@ jobs:
     uses:
       ./.github/workflows/pnpm-audit-pr.yml
   slack-notification:
+    needs: pnpm-audit-work
     runs-on: ubuntu-20.04
+    if: failure()
     steps:
-      - name: Slack notification when workflow fails
-        if: |
-          failure()
+      - name: Slack notification when pnpm-audit-work fails
         id: slack
         uses: slackapi/slack-github-action@v1.23.0
         with:
             payload: |
               {
-              	"slack_message": "Github pnpm audit workflow result: ${{ job.status }}",
-              	"workflow_url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}",
-              	"status": "${{ job.status }}",
-              	"default_ref": "${{ github.ref_name }}"
+              	"slack_message": "On ${{ github.ref_name }} branch of ${{ github.repository }}:\nGithub pnpm audit workflow result: ${{ needs.pnpm-audit-work.result }}",
+              	"workflow_url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
               }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} 
