--- a/fwoa-utilities/package.json
+++ b/fwoa-utilities/package.json
@@ -39,12 +39,14 @@
     "@rushstack/heft": "0.49.0",
     "@rushstack/heft-jest-plugin": "0.4.2",
     "@rushstack/heft-node-rig": "1.11.11",
+    "@types/chance": "^1.1.1",
     "@types/heft-jest": "^1.0.3",
     "@types/jest": "^26.0.19",
     "@types/lodash": "^4.14.182",
     "@types/node": "^14",
     "aws-sdk": "^2.1000.0",
     "aws-sdk-mock": "^5.1.0",
+    "chance": "^1.1.7",
     "eslint": "^8.7.0",
     "jest": "^26.6.3",
     "jest-each": "^26.6.2",
