docs: update changefiles

--- a/common/changes/@aws/fhir-works-on-aws-authz-smart/FhirWorksAppRegistry_2023-02-17-21-32.json
+++ b/common/changes/@aws/fhir-works-on-aws-authz-smart/FhirWorksAppRegistry_2023-02-17-21-32.json
@@ -3,7 +3,7 @@
     {
       "packageName": "@aws/fhir-works-on-aws-authz-smart",
       "comment": "whitespace changes",
-      "type": "patch"
+      "type": "none"
     }
   ],
   "packageName": "@aws/fhir-works-on-aws-authz-smart"
