ci: update SonarQube properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,8 +15,14 @@ sonar.exclusions=\
     **/tests/**, \
     **/test*, \
     **/node_modules/**, \
-    deployment/*-assets/** \
-    deployment/open-source
+    deployment/*-assets/**, \
+    deployment/open-source/**, \
+    **/temp/**, \
+    **/lib/**/*.js, \
+    **/lib/**/*.map, \
+    **/lib/**/*d.ts, \
+    **/lib/**/*.json
+
 
 # Code coverage Specific Properties
 sonar.coverage.exclusions=\
