chore: fix incorrect file deletion

--- a/common/changes/@aws/fhir-works-on-aws-search-es/sevu-tasks-npm-publish-workflow_2023-02-24-21-39.json
+++ b/common/changes/@aws/fhir-works-on-aws-search-es/sevu-tasks-npm-publish-workflow_2023-02-24-21-39.json
@@ -2,7 +2,7 @@
   "changes": [
     {
       "packageName": "@aws/fhir-works-on-aws-search-es",
-      "comment": "",
+      "comment": "remove prepublish script",
       "type": "none"
     }
   ],
