--- a/common/changes/@aws/fhir-works-on-aws-authz-smart/sevu-tasks-deprecate-serverless_2023-03-03-18-29.json
+++ b/common/changes/@aws/fhir-works-on-aws-authz-smart/sevu-tasks-deprecate-serverless_2023-03-03-18-29.json
@@ -2,7 +2,7 @@
   "changes": [
     {
       "packageName": "@aws/fhir-works-on-aws-authz-smart",
-      "comment": "deprecate serverless",
+      "comment": "deprecated serverless",
       "type": "major"
     }
   ],
