--- a/common/changes/@aws/fhir-works-on-aws-interface/kcadette-tasks-sanitize-export-errors_2023-03-24-04-31.json
+++ b/common/changes/@aws/fhir-works-on-aws-interface/kcadette-tasks-sanitize-export-errors_2023-03-24-04-31.json
@@ -2,7 +2,7 @@
   "changes": [
     {
       "packageName": "@aws/fhir-works-on-aws-interface",
-      "comment": "sanitize error messages to exclude user input",
+      "comment": "sanitized error messages to exclude user input",
       "type": "patch"
     }
   ],
