--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,9 +5,7 @@
 
 name: Unit Tests, Deploy, Integration Test
 on:
-  push:
-    branches:
-      - stage
+  workflow_call:
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
