--- a/.github/workflows/merge-develop-to-stage.yml
+++ b/.github/workflows/merge-develop-to-stage.yml
@@ -36,7 +36,7 @@ jobs:
     name: Merge develop to stage
     runs-on: ubuntu-20.04
     needs: [deploy-fhir, deploy-smart-fhir]
-    if: ${{ (needs.deploy-fhir.result=='success') || (needs.deploy-smart-fhir.result=='success') }}
+    if: ${{ (needs.deploy-fhir.result=='success') && (needs.deploy-smart-fhir.result=='success') }}
     steps:    
       - uses: actions/checkout@v3
         with:
