Revert "chore: check integ tests for deploy and smart deploy before merging d… (#104)"
This reverts commit 3c2d13afd24bad4e202f7feedc2108adc9f5f7ce.

--- a/.github/workflows/deploy-smart.yaml
+++ b/.github/workflows/deploy-smart.yaml
@@ -1,6 +1,8 @@
 name: (SMART) Unit Tests, Deploy, Integration Test
 on:
-  workflow_call:
+  push:
+    branches:
+      - stage
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.SMART_AWS_ACCESS_KEY_ID }}
