--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,7 +5,9 @@
 
 name: Unit Tests, Deploy, Integration Test
 on:
-  workflow_call:
+  push:
+    branches:
+      - stage
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
