chore: test secrets inputs for reusable workflow

--- a/.github/workflows/deploy-smart.yaml
+++ b/.github/workflows/deploy-smart.yaml
@@ -1,11 +1,10 @@
 name: (SMART) Unit Tests, Deploy, Integration Test
 on:
   workflow_call:
-    secrets:
-      aws-access-key-id:
-        required: true
-      aws-secret-access-key:
-        required: true
+
+env:
+  AWS_ACCESS_KEY_ID: ${{ secrets.SMART_AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.SMART_AWS_SECRET_ACCESS_KEY }}
 
 jobs:
   build-validate:
